--- a/food.html
+++ b/food.html
@@ -32,19 +32,19 @@
 
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample5.jpg" alt="和菓子名"><span>200円</span></figure>
 <h4>商品名</h4>
 <p>あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample4.jpg" alt="和菓子名"><span>200円</span></figure>
 <h4>商品名</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample3.jpg" alt="和菓子名"><span>200円</span></figure>
 <h4>商品名</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
@@ -55,56 +55,30 @@
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
  
- 
- 
- 
- 
- 
-<div style="text-align: center">  
-<figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/小見出しを追加 (1).png" alt="トレカケース全8種類">
-</figure>
+<div class="list up">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample5.jpg" alt="和菓子名"><span>200円</span></figure>
+<h4>商品名</h4>
+<p>あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。</p>
 </div>
 
-<br />  
-<br /> 
+<div class="list up">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample4.jpg" alt="和菓子名"><span>200円</span></figure>
+<h4>商品名</h4>
+<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+</div>
+
+<div class="list up">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample3.jpg" alt="和菓子名"><span>200円</span></figure>
+<h4>商品名</h4>
+<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+</div>
+
+<div class="list up">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
+<h4>商品名</h4>
+<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+</div>
  
-<div class="list2">
-<figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/sample1.jpg" alt="トレカケース">
-<figcaption>トレカケース</figcaption>
-</figure>
-<div class="text">
-<h3>トレカケース</h3>
-<h4>1600円（税込1760円）</h4>
-女の子の夢がいっぱい詰まったグッズ♡<br>
-いつでもどこでも推しと一緒にいよう！
-</div>
-</div>
-
-<div class="list2">
-<figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/sample2.jpg" alt="缶バッチケース">
-<figcaption>缶バッチケース</figcaption>
-</figure>
-<div class="text">
-<h3>缶バッチケース</h3>
-<h4>600円（税込660円）</h4>
-おうちでお留守番しがちな缶バッチ<br>
-一緒にお出かけしてみない？
-</div>
-</div>
-
-<div class="list2">
-<figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/sample3.jpg" alt="アクキーケース">
-<figcaption>アクキーケース</figcaption>
-</figure>
-<div class="text">
-<h3>アクキーケース</h3>
-<h4>1300円（税込1430円）</h4>
-</div>
-</div>
 
 </section>
 
