--- a/food.html
+++ b/food.html
@@ -29,17 +29,19 @@
 
 <h2>Food menu<span>フードメニュー</span></h2>
  
-
+ <h2>Sweets<span>限定スイーツ</span></h2>
+<p>作中に出てくるエンゲージリングをモチーフにしたチョコレートケーキです。味は全部で8種類からお選びいただけます。</p>
+ 
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h4>商品名</h4>
-<p>あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。</p>
+<h4>いちご</h4>
+<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h4>商品名</h4>
+<h4>限定スイーツ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
@@ -56,7 +58,7 @@
 </div>
  
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/isample6.jpg" alt="和菓子名"><span>200円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
 <h4>商品名</h4>
 <p>あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。</p>
 </div>
