--- a/food.html
+++ b/food.html
@@ -41,43 +41,43 @@
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h4>限定スイーツ</h4>
+<h4>オレンジ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h4>商品名</h4>
+<h4>ブルーベリー</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h4>商品名</h4>
+<h4>抹茶</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
  
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h4>商品名</h4>
+<h4>バナナ</h4>
 <p>あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h4>商品名</h4>
+<h4>ピーチ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h4>商品名</h4>
+<h4>ホワイト</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h4>商品名</h4>
+<h4>ブルー</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
  
