--- a/food.html
+++ b/food.html
@@ -30,7 +30,7 @@
 <h2>Food menu<span>フードメニュー</span></h2>
  
  <h2>Sweets<span>限定スイーツ</span></h2>
-<center><p>作中に出てくるエンゲージリングをモチーフにしたチョコレートケーキです。味は全部で8種類からお選びいただけます。</p><center>
+<center><h3>作中に出てくるエンゲージリングをモチーフにしたチョコレートケーキです。味は全部で8種類からお選びいただけます。</h3><center>
  
 
 <div class="list up">
