--- a/food.html
+++ b/food.html
@@ -30,7 +30,7 @@
 <h2>Food menu<span>フードメニュー</span></h2>
  
  <h2>Sweets<span>限定スイーツ</span></h2>
-<center><h4>作中に出てくるエンゲージリングをモチーフにしたチョコレートケーキです。味は全部で8種類からお選びいただけます。</h4><center>
+<h2></span>作中に出てくるエンゲージリングをモチーフにしたチョコレートケーキです。味は全部で8種類からお選びいただけます。</span></h2>
  
 
 <div class="list up">
