--- a/food.html
+++ b/food.html
@@ -31,7 +31,7 @@
  
  <h2>Sweets<span>限定スイーツ</span></h2>
 
-<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス.png" alt="和菓子名">
+<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス.png" alt="スイーツ">
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
