--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 <img src="https://a-chaaa.github.io/rinakoteikoku/小見出しを追加 (1).png" alt="トレカケース全8種類">
 </figure>
 </div>
+ 
+ <div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/トレカケース.png" alt="トレカケース説明">
+</figure>
+</div>
+ 
 
 <br />  
 <br /> 
