--- a/food.html
+++ b/food.html
@@ -31,7 +31,12 @@
  
  <h2>Sweets<span>限定スイーツ</span></h2>
 
-<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス.png" alt="スイーツ">
+ 
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス" alt="スイーツ">
+</figure>
+</div>
 
 <br> 
  
