--- a/detail.html
+++ b/detail.html
@@ -28,7 +28,13 @@
 <section>
 
 <h2>Ditail<span>詳細</span></h2>
-画像入れる
+  
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス(1).png" alt="詳細">
+</figure>
+</div>
+
   
 <h2>Event map<span>イベントマップ</span></h2>
   
