--- a/food.html
+++ b/food.html
@@ -34,7 +34,7 @@
  
 <div style="text-align: center">  
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス" alt="スイーツ">
+<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス.png" alt="スイーツ">
 </figure>
 </div>
 
