--- a/index2.html
+++ b/index2.html
@@ -29,8 +29,11 @@
 
 <h2>About<span>作品について</span></h2>
  
-<h3>シグナルとシグナレス</h3>
-  
+ <span class="slide-in downAnime">
+<h3><span class="slide-in_inner downAnimeInner">シグナルとシグナレス</span></h3>
+</span>
+</p>
+
 
 
 <div class="list2">
