--- a/index2.html
+++ b/index2.html
@@ -33,6 +33,10 @@
 <h3><span class="slide-in_inner downAnimeInner">シグナルとシグナレス</span></h3>
 </span>
 </p>
+ 
+ <div class="explain">
+  <h3>あああああああ</h3>
+ </div>
 
 
 
