--- a/index2.html
+++ b/index2.html
@@ -29,13 +29,12 @@
 
 <h2>About<span>作品について</span></h2>
  
- <span class="slide-in downAnime">
-<h3><span class="slide-in_inner downAnimeInner">シグナルとシグナレス</span></h3>
-</span>
-</p>
+
  
  <div class="explain">
-  <h4>あああああああ<br>ここだけ背景の色も変えられるよおそらく</h4>
+  <h3>シグナルとシグナレス</h3>
+  <br>
+  <h4>宮沢賢治<br>淡くて切ない、信号機の身分差ラブストーリー</h4>
  </div>
  <br>
   <br>
