--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
  
  <div class="explain">
   <h3>シグナルとシグナレス</h3>
-  <h4>宮沢賢治<br>淡くて切ない、信号機の身分差ラブストーリー</h4>
+  <h4>宮沢賢治<br><br>淡くて切ない、信号機の身分差ラブストーリー</h4>
  </div>
  <br>
   <br>
