--- a/detail.html
+++ b/detail.html
@@ -31,7 +31,7 @@
   
 <div style="text-align: center">  
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス (1).png" alt="詳細">
+<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス (1).png" alt="詳細">
 </figure>
 </div>
 
