--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,11 @@
 </div>
 </div>
   
-
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/登場人物.png" alt="登場人物">
+</figure>
+</div>
 
 </section>
 
