--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,9 @@
 言葉を交わすことだけ————。
 </div>
 </div>
-  
+
+ 
+<h2>Character introduction<span>登場人物紹介</span></h2>
 <div style="text-align: center">  
 <figure class="up">
 <img src="https://a-chaaa.github.io/rinakoteikoku/登場人物.png" alt="登場人物">
