--- a/index2.html
+++ b/index2.html
@@ -47,9 +47,11 @@
 </figure>
 <div class="text">
 <h4>作品紹介</h4>
-このお話は宮沢賢治の短編童話で、1923年5月11日〜23日の期間に岩手毎日新聞にて11回に分けて掲載されました。<br>
-数少ない生前発表童話の一つで、賢治独特の暖かいユーモアあふれる作品です。<br>
-賢治が居住していた岩手県花巻市の花巻駅から着想を得た、と言われています。
+このお話は宮沢賢治の短編童話で、1923年5月11日〜23日の期間に<br>
+岩手毎日新聞にて11回に分けて掲載されました。<br>
+数少ない生前発表童話の一つで、<br>
+賢治独特の暖かいユーモアあふれる作品です。<br>
+賢治が居住していた岩手県花巻市の花巻駅から着想を得たと言われています。
 
 </div>
 </div>
