--- a/index2.html
+++ b/index2.html
@@ -66,9 +66,8 @@
 信号機のシグナルとシグナレスの<br>
 身分違いの切ないラブストーリー<br><br>
 
-決して動くことができない信号機の<br>
-彼らにできることは、相手を思い、<br>
-言葉を交わすことだけ————。
+決して動くことができない信号機の彼らにできることは、<br>
+ 相手を想い、言葉を交わすことだけ————。
 </div>
 </div>
 
