--- a/index2.html
+++ b/index2.html
@@ -51,7 +51,8 @@
 岩手毎日新聞にて11回に分けて掲載されました。<br>
 数少ない生前発表童話の一つで、<br>
 賢治独特の暖かいユーモアあふれる作品です。<br>
-賢治が居住していた岩手県花巻市の花巻駅から着想を得たと言われています。
+賢治が居住していた岩手県花巻市の花巻駅から<br>
+着想を得たと言われています。
 
 </div>
 </div>
