--- a/index2.html
+++ b/index2.html
@@ -33,12 +33,17 @@
  
  <div class="explain">
   <h3>シグナルとシグナレス</h3>
-  <h4>宮沢賢治<br><br>淡くて切ない、信号機の身分差ラブストーリー</h4>
+  <h4>宮沢賢治<br></h4>
  </div>
  <br>
   <br>
+ <br>
+<h2>Synopsis<span>あらすじ</span></h2>
+ <h4>作品紹介</h4>
+ <h5>信号機のシグナルとシグナレスの<br>身分違いの切ないラブストーリー<br>決して動くことができない信号機の彼らにできることは、<br>ただ相手を想い、言葉を交わすことだけ————。</h5>
+ <br>
   <br>
-
+ <br>
 
 <div class="list2">
 <figure class="up">
