--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@
  <br>
 <h2>Synopsis<span>あらすじ</span></h2>
  <h4>作品紹介</h4>
- <h5>信号機のシグナルとシグナレスの<br>身分違いの切ないラブストーリー<br>決して動くことができない信号機の彼らにできることは、<br>ただ相手を想い、言葉を交わすことだけ————。</h5>
+ <h5>信号機のシグナルとシグナレスの<br>身分違いの淡くて切ないラブストーリー<br>決して動くことができない信号機の彼らにできることは、<br>ただ相手を想い、言葉を交わすことだけ————。</h5>
  <br>
   <br>
  <br>
