--- a/index2.html
+++ b/index2.html
@@ -65,12 +65,12 @@
 <figcaption>イメージ画像</figcaption>
 </figure>
 <div class="text">
-<h4>あらすじ</h4>
-信号機のシグナルとシグナレスの<br>
-身分違いの切ないラブストーリー<br><br>
-
-決して動くことができない信号機の彼らにできることは、<br>
- 相手を想い、言葉を交わすことだけ————。
+<h4>オタクと推しの関係に似てる？</h4>
+シグナルとシグナレスは信号機なので<br>
+当然、動くことができませんよね。<br><br>
+さあ、オタクの皆さん。<br>
+その二人の関係が、次元を飛び越えられなかったり<br>
+なかなか会えなかったりする自分たちと似ていませんか？
 </div>
 </div>
 
