--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,8 @@
 <div class="text">
 <h4>オタクと推しの関係に似てる？</h4>
 シグナルとシグナレスは信号機なので<br>
-当然、動くことができませんよね。<br><br>
+当然、動くことができませんよね。<br>
+そしてさらにこの二人には身分差もあります。<br><br>
 さあ、オタクの皆さん。<br>
 その二人の関係が、次元を飛び越えられなかったり<br>
 なかなか会えなかったりする自分たちと似ていませんか？
