--- a/access.html
+++ b/access.html
@@ -66,13 +66,14 @@
 <!--/#container-->
 
 <!--メインメニュー-->
-<!--メインメニュー-->
 <nav id="menubar">
 <ul>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/about.html">Top<span>トップ</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/index2.html">About<span>作品について</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/index.html">Event goods<span>イベントグッズ</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/food.html">Food menu<span>フードメニュー</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/name.html">Name plate<span>なまえプレート</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/projection.html">Projection mapping<span>プロジェクションマッピング</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/name.html">Name plate<span>なまえプレート</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/access.html">Access<span>アクセス</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/detail.html">Detail<span>詳細</span></a></li>
