--- a/index2.html
+++ b/index2.html
@@ -148,11 +148,13 @@
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/index.html">Event goods<span>イベントグッズ</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/food.html">Food menu<span>フードメニュー</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/name.html">Name plate<span>なまえプレート</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/projection.html">Projection mapping<span>プロジェクションマッピング</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/name.html">Name plate<span>なまえプレート</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/access.html">Access<span>アクセス</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/detail.html">Detail<span>詳細</span></a></li>
 </ul>
 </nav>
-
+ 
 <!--アニメーションロゴ-->
 <svg id="svg-logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 1000 300" style="enable-background:new 0 0 1000 300;" xml:space="preserve">
 <image xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="https://a-chaaa.github.io/rinakoteikoku/logo.svg" width="100%" height="100%" mask="url(#clipmask)"></image>
