--- a/food.html
+++ b/food.html
@@ -89,7 +89,40 @@
 <h4>ブルー</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
+
  
+ <br> 
+ <br> 
+
+ <h2>Cream soda<span>クリームソーダ</span></h2>
+ 
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/クリームソーダ.png" alt="クリームソーダ">
+</figure>
+</div>
+ 
+<br> 
+<br> 
+ 
+<div class="list up">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
+<h4>シグナレスを照らす月の光</h4>
+<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+</div>
+
+<div class="list up">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
+<h4>シグナルの燃える心</h4>
+<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+</div>
+
+<div class="list up">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
+<h4>二人が祈る星空</h4>
+<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+</div>
+
 
 </section>
 
@@ -99,27 +132,27 @@
 
 <div class="pickup">
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample1.jpg" alt=""></figure>
 </div>
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample2.jpg" alt=""></figure>
 </div>
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample3.jpg" alt=""></figure>
 </div>
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample4.jpg" alt=""></figure>
 </div>
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample5.jpg" alt=""></figure>
 </div>
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt=""></figure>
 </div>
 
