--- a/food.html
+++ b/food.html
@@ -29,7 +29,7 @@
 
 <h2>Food menu<span>フードメニュー</span></h2>
  
- <h2>Sweets<span>限定スイーツ</span></h2>
+ <h2>Chocorate cake<span>チョコレートケーキ</span></h2>
 
  
 <div style="text-align: center">  
