--- a/food.html
+++ b/food.html
@@ -122,13 +122,17 @@
 <h4>二人が祈る星空</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
+ 
+<div class="list up">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
+<h4>シグナレスを照らす月の光</h4>
+<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+</div>
 
 
 </section>
 
- 
-<br> 
-<br> 
+
 <section>
 
 <h2>Photo's<span>イベント写真</span></h2>
