--- a/food.html
+++ b/food.html
@@ -100,7 +100,7 @@
  
 <div style="text-align: center">  
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/クリームソーダ.png" alt="クリームソーダ">
+<img src="https://a-chaaa.github.io/rinakoteikoku/クリームソーダ.png" alt="クリームソーダ">
 </figure>
 </div>
  
