--- a/about.html
+++ b/about.html
@@ -59,27 +59,27 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 
 <div class="pickup">
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample1.jpg" alt=""></figure>
 </div>
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample2.jpg" alt=""></figure>
 </div>
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample3.jpg" alt=""></figure>
 </div>
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample4.jpg" alt=""></figure>
 </div>
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample5.jpg" alt=""></figure>
 </div>
 
-<div class="list">
+<div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt=""></figure>
 </div>
 
