--- a/food.html
+++ b/food.html
@@ -108,19 +108,19 @@
 <br> 
  
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/青クリ.png" alt="和菓子名"><span>770円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/青のクリソ.png" alt="和菓子名"><span>770円</span></figure>
 <h4>シグナレスを照らす月の光</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/赤クリ.jpg" alt="和菓子名"><span>770円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/赤のクリソ.jpg" alt="和菓子名"><span>770円</span></figure>
 <h4>シグナルの燃える心</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンクリ.jpg" alt="和菓子名"><span>770円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンクのクリソ.jpg" alt="和菓子名"><span>770円</span></figure>
 <h4>二人が祈る星空</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
