--- a/detail.html
+++ b/detail.html
@@ -40,6 +40,15 @@
   
 画像入れる
 
+  
+<h2>Daily schedule<span>1日のスケジュール</span></h2>
+    
+  
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/スケジュール.png" alt="スケジュール">
+</figure>
+</div>
 
 </section>
 
