--- a/name.html
+++ b/name.html
@@ -27,7 +27,7 @@
 
 <section>
 
-<h2>Event goods<span>お好きなパーツを組み合わせて自分だけのオリジナル名前プレートを作れます</span></h2>
+<h2>Making an original name plate<span>お好きなパーツを組み合わせて自分だけのオリジナル名前プレートを作れます</span></h2>
  
 <div style="text-align: center">  
 <figure class="up">
