--- a/name.html
+++ b/name.html
@@ -29,6 +29,8 @@
 
 <h2>Making an original name plate<span>お好きなパーツを組み合わせて自分だけのオリジナル名前プレートを作れます</span></h2>
  
+混雑状況により整理券をお配りしております。
+ 
 <div style="text-align: center">  
 <figure class="up">
 <img src="https://a-chaaa.github.io/rinakoteikoku/小見出しを追加 (1).png" alt="トレカケース全8種類">
