--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
 いつでもどこでも推しと一緒にいよう！
 </div>
 </div>
+ 
+ <div class="list2">
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/sample3.jpg" alt="名前入り切符">
+<figcaption>名前入りきっぷ</figcaption>
+</figure>
+<div class="text">
+<h3>名前入りきっぷ</h3>
+<h4>300円（税込330円）</h4>
+</div>
+</div>
+
 
 <div class="list2">
 <figure class="up">
@@ -84,6 +96,7 @@
 <h4>1300円（税込1430円）</h4>
 </div>
 </div>
+
 
 </section>
 
