--- a/food.html
+++ b/food.html
@@ -103,26 +103,26 @@
 <img src="https://a-chaaa.github.io/rinakoteikoku/クリームソーダ.png" alt="クリームソーダ">
 </figure>
 </div>
- 
+ <h2> <span>このクリームソーダは、物語に沿って作られています。</span></h2>
 <br> 
 <br> 
  
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/青のクリソ.png" alt="和菓子名"><span>770円</span></figure>
-<h4>シグナレスを照らす月の光</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<h4>二人を照らす月の光</h4>
+<p>電信柱やその仲間たちに二人の恋を反対され、他のみんなが夢を見ている中、寝れないでしょんぼりうなだれている。そんな二人を照らす、月の光を表現したクリームソーダです。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/赤のクリソ.jpg" alt="和菓子名"><span>770円</span></figure>
 <h4>シグナルの燃える心</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<p>シグナルの胸は燃えるばかり。「ああ、シグナレスさん、僕たちたった二人だけ、遠くの遠くのみんなのいないところに行ってしまいたいね」　そんなシグナルの燃える心を表したクリームソーダです。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンクのクリソ.jpg" alt="和菓子名"><span>770円</span></figure>
 <h4>二人が祈る星空</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<p>「さあ、一緒に祈りましょう」「ええ」　そうして二人は願いをこめて星空に祈りました。その星空を表現したクリームソーダです。</p>
 </div>
  
 <div class="list up">
