--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,8 @@
  
  <br>
 <h2>Synopsis<span>あらすじ</span></h2>
- <h4>信号機のシグナルとシグナレスの、身分違いの淡くて切ないラブストーリー<br>決して動くことができない信号機の彼らにできることは、ただ相手を想い、言葉を交わすことだけ————。</h4>
+ <font color=”#fffff0″>
+ <h4>信号機のシグナルとシグナレスの、身分違いの淡くて切ないラブストーリー<br>決して動くことができない信号機の彼らにできることは、ただ相手を想い、言葉を交わすことだけ————。</h4></font>
  <br>
   <br>
  <br>
