--- a/food.html
+++ b/food.html
@@ -103,7 +103,7 @@
 <img src="https://a-chaaa.github.io/rinakoteikoku/クリームソーダ.png" alt="クリームソーダ">
 </figure>
 </div>
- <h2> <span>このクリームソーダは、物語に沿って作られています。</span></h2>
+ <h2> <span>シグナルとシグナレスの物語に沿って作られたクリームソーダです。</span></h2>
 <br> 
 <br> 
  
@@ -133,7 +133,8 @@
 
 </section>
 
-
+<br> 
+<br> 
 <section>
 
 <h2>Photo's<span>イベント写真</span></h2>
