--- a/food.html
+++ b/food.html
@@ -106,6 +106,11 @@
  <h2> <span>シグナルとシグナレスの物語に沿って作られたクリームソーダです。</span></h2>
  
 <div class="list up">
+
+
+</div>
+ 
+<div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/青のクリソ.png" alt="和菓子名"><span>770円</span></figure>
 <h4>二人を照らす月の光</h4>
 <p>電信柱やその仲間たちに二人の恋を反対され、他のみんなが夢を見ている中、寝れないでしょんぼりうなだれている。そんな二人を照らす、月の光を表現したクリームソーダです。</p>
