--- a/food.html
+++ b/food.html
@@ -125,7 +125,7 @@
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンクのクリソ.jpg" alt="和菓子名"><span>770円</span></figure>
 <h4>二人が祈る星空</h4>
-<p>「さあ、一緒に祈りましょう」「ええ」<br> そうして二人は願いをこめて星空に祈りました。二人が祈った星空を表現したクリームソーダです。</p>
+<p>「さあ、一緒に祈りましょう」「ええ」<br> そうして二人は星空に祈りました。二人が願いを込めてお祈りした星空を表現したクリームソーダです。</p>
 </div>
  
 <div class="list up">
