--- a/food.html
+++ b/food.html
@@ -110,7 +110,7 @@
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/青のクリソ.png" alt="和菓子名"><span>770円</span></figure>
 <h4>二人を照らす月の光</h4>
-<p>電信柱やその仲間たちに二人の恋を反対され、他のみんなが夢を見ている中、寝れないでしょんぼりうなだれている。そんな二人を照らす、月の光を表現したクリームソーダです。</p>
+<p>電信柱やその仲間たちに二人の恋を反対され、他のみんなが夢を見ている中、寝れないでしょんぼりうなだれていました。そんな二人を照らす、月の光を表現したクリームソーダです。</p>
 </div>
 
 <div class="list up">
@@ -122,7 +122,7 @@
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンクのクリソ.jpg" alt="和菓子名"><span>770円</span></figure>
 <h4>二人が祈る星空</h4>
-<p>「さあ、一緒に祈りましょう」「ええ」<br> そうして二人は星空に祈りました。二人が願いを込めてお祈りした星空を表現したクリームソーダです。</p>
+<p>「さあ、一緒に祈りましょう」「ええ」<br> そうして二人は星空に祈りました。<br>二人が願いを込めてお祈りした星空を表現したクリームソーダです。</p>
 </div>
  
 <div class="list up">
