--- a/food.html
+++ b/food.html
@@ -116,13 +116,13 @@
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/赤のクリソ.jpg" alt="和菓子名"><span>770円</span></figure>
 <h4>シグナルの燃える心</h4>
-<p>シグナルの胸は燃えるばかり。<br>「ああ、シグナレスさん、僕たちたった二人だけ、遠くの遠くのみんなのいないところに行ってしまいたいね」<br> そんなシグナルの燃える心を表したクリームソーダです。</p>
+<p>シグナルの胸は燃えるばかり。<br>「ああ、シグナレスさん、僕たち<br>たった二人だけ、遠くの遠くのみんなの<br>いないところに行ってしまいたいね」<br> そんなシグナルの燃える心を表したクリームソーダです。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンクのクリソ.jpg" alt="和菓子名"><span>770円</span></figure>
 <h4>二人が祈る星空</h4>
-<p>「さあ、一緒に祈りましょう」「ええ」<br> そうして二人は星空に祈りました。<br>二人が願いを込めてお祈りした星空を表現したクリームソーダです。</p>
+<p>「さあ、一緒に祈りましょう」「ええ」<br> そうして二人は星空に祈りました。<br>二人が願いを込めてお祈りした星空を<br>表現したクリームソーダです。</p>
 </div>
  
 <div class="list up">
