--- a/name.html
+++ b/name.html
@@ -29,7 +29,11 @@
 
 <h2>Making an original name plate<span>お好きなパーツを組み合わせて自分だけのオリジナル名前プレートを作れます</span></h2>
  
-混雑状況により整理券をお配りしております。
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/混雑状況により、整理券をお配りします。.png" alt="注意点">
+</figure>
+</div>
  
 <div style="text-align: center">  
 <figure class="up">
