--- a/name.html
+++ b/name.html
@@ -27,7 +27,7 @@
 
 <section>
 
-<h2>Making an original name plate<span>お好きなパーツを組み合わせて自分だけのオリジナル名前プレートを作れます</span></h2>
+<h2>Making an original name plate<span>お好きなパーツを組み合わせてオリジナルの名前プレートを作れます</span></h2>
  
 <div style="text-align: center">  
 <figure class="up">
@@ -47,10 +47,11 @@
 <figcaption>トレカケース</figcaption>
 </figure>
 <div class="text">
-<h3>トレカケース</h3>
-<h4>1600円（税込1760円）</h4>
-女の子の夢がいっぱい詰まったグッズ♡<br>
-いつでもどこでも推しと一緒にいよう！
+<h3>お好きなプレートとパーツをを選んで自分だけの名前プレートを作れます</h3>
+
+
+推しの名前を入れるも良し<br>
+推しのイニシャルを入れるも良し
 </div>
 </div>
 
