--- a/name.html
+++ b/name.html
@@ -55,6 +55,12 @@
 </div>
 </div>
 
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/混雑状況により、整理券をお配りします。.png" alt="料金表">
+</figure>
+</div> 
+ 
 <div class="list2">
 <figure class="up">
 <img src="https://a-chaaa.github.io/rinakoteikoku/sample2.jpg" alt="缶バッチケース">
