--- a/name.html
+++ b/name.html
@@ -43,7 +43,7 @@
  
 <div class="list2">
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/sample1.jpg" alt="トレカケース">
+<img src="https://a-chaaa.github.io/rinakoteikoku/名前プレートだぜ.png" alt="トレカケース">
 <figcaption>トレカケース</figcaption>
 </figure>
 <div class="text">
