--- a/name.html
+++ b/name.html
@@ -47,7 +47,7 @@
 <figcaption>トレカケース</figcaption>
 </figure>
 <div class="text">
-<h4>お好きなプレートとパーツをを選んで自分だけの名前プレートを作れます</h4>
+お好きなプレートとパーツをを選んで自分だけの名前プレートを作れます
 
 
 推しの名前を入れるも良し<br>
