--- a/name.html
+++ b/name.html
@@ -47,9 +47,7 @@
 <figcaption>トレカケース</figcaption>
 </figure>
 <div class="text">
-お好きなプレートとパーツをを選んで自分だけの名前プレートを作れます
-
-
+お好きなプレートとパーツをを選んで自分だけの名前プレートを作れます<br>
 推しの名前を入れるも良し<br>
 推しのイニシャルを入れるも良し
 </div>
