--- a/name.html
+++ b/name.html
@@ -46,7 +46,8 @@
 <img src="https://a-chaaa.github.io/rinakoteikoku/名前プレートだぜ.png" alt="トレカケース">
 </figure>
 <div class="text">
-お好きなプレートとパーツをを選んで自分だけの名前プレートを作れます<br>
+お好きなプレートとパーツをを選んで<br>
+自分だけの名前プレートを作れます<br>
 推しの名前を入れるも良し<br>
 推しのイニシャルを入れるも良し
 </div>
