--- a/name.html
+++ b/name.html
@@ -31,7 +31,7 @@
  
 <div style="text-align: center">  
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/混雑状況により、整理券をお配りします。.png" alt="注意点">
+<img src="https://a-chaaa.github.io/rinakoteikoku/混雑.png" alt="注意点">
 </figure>
 </div>
  
@@ -54,9 +54,25 @@
 
 <div style="text-align: center">  
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/混雑状況により、整理券をお配りします。.png" alt="料金表">
+<img src="https://a-chaaa.github.io/rinakoteikoku/料金.png" alt="料金表">
 </figure>
 </div> 
+
+<br>
+ 
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/680.png" alt="料金表">
+</figure>
+</div> 
+
+ <br>
+ 
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/880.png" alt="料金表">
+</figure>
+</div>
 
  <br>
  <br>
