--- a/name.html
+++ b/name.html
@@ -48,6 +48,14 @@
 <div class="text">
 お好きなプレートとパーツを選んで<br>
 自分だけの名前プレートを作れます
+ 
+<div class="list2">
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/ネームプレート.png" alt="トレカケース">
+</figure>
+<div class="text">
+<h3>基本情報</h3>
+
 
 
 </div>
