--- a/name.html
+++ b/name.html
@@ -49,14 +49,16 @@
 お好きなプレートとパーツを選んで<br>
 自分だけの名前プレートを作れます
  
+</div>
+</div>
+
 <div class="list2">
 <figure class="up">
 <img src="https://a-chaaa.github.io/rinakoteikoku/ネームプレート.png" alt="トレカケース">
 </figure>
 <div class="text">
 <h3>基本情報</h3>
-
-
+所要時間　5〜10分
 
 </div>
 </div>
