--- a/food.html
+++ b/food.html
@@ -108,19 +108,19 @@
 
  
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/青のクリソ.png" alt="和菓子名"><span>770円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/青.png" alt="和菓子名"><span>770円</span></figure>
 <h4>二人を照らす月の光</h4>
 <p>電信柱やその仲間たちに二人の恋を反対され、他のみんなが夢を見ている中、寝れないでしょんぼりうなだれていました。そんな二人を照らす、月の光を表現したクリームソーダです。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/赤のクリソ.png" alt="和菓子名"><span>770円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/赤.png" alt="和菓子名"><span>770円</span></figure>
 <h4>シグナルの燃える心</h4>
 <p>シグナルの胸は燃えるばかり。<br>「ああ、シグナレスさん、僕たち<br>たった二人だけ、遠くの遠くのみんなの<br>いないところに行ってしまいたいね」<br> そんなシグナルの燃える心を表したクリームソーダです。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンクのクリソ.png" alt="和菓子名"><span>770円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンク.png" alt="和菓子名"><span>770円</span></figure>
 <h4>二人が祈る星空</h4>
 <p>「さあ、一緒に祈りましょう」「ええ」<br> そうして二人は星空に祈りました。<br>二人が願いを込めてお祈りした星空を<br>表現したクリームソーダです。</p>
 </div>
