--- a/food.html
+++ b/food.html
@@ -113,7 +113,8 @@
 <p>電信柱やその仲間たちに二人の恋を<br>
 反対され、他のみんなが夢を見ている中、<br>
 寝れないでしょんぼりうなだれていました。<br>
-そんな二人を照らす月の光を表現しています。</p>
+そんな二人を優しく照らす月の光を<br>
+表現しています。</p>
 </div>
 
 <div class="list up">
