--- a/food.html
+++ b/food.html
@@ -122,7 +122,7 @@
 <h4>シグナルの燃える心</h4>
 <p>シグナルの胸は燃えるばかり。<br>
 「ああ、シグナレスさん、僕たちたった<br>
-二人だけ、遠くの遠くのみんなのいない
+二人だけ、遠くの遠くのみんなのいない<br>
 ところに行ってしまいたいね」<br> 
 そんなシグナルの燃える心を表しています。</p>
 </div>
