--- a/food.html
+++ b/food.html
@@ -121,9 +121,9 @@
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/赤.png" alt="和菓子名"><span>770円</span></figure>
 <h4>シグナルの燃える心</h4>
 <p>シグナルの胸は燃えるばかり。<br>
-「ああ、シグナレスさん、僕たちたった<br>
-二人だけ、遠くの遠くのみんなのいない<br>
-ところに行ってしまいたいね」<br> 
+「ああ、シグナレスさん、僕たちたった二人だけ<br>
+遠くの遠くのみんなのいないところに<br> 
+行ってしまいたいね」<br> 
 そんなシグナルの燃える心を表しています。</p>
 </div>
 
