--- a/detail.html
+++ b/detail.html
@@ -41,7 +41,7 @@
 画像入れる
 
   
-<h2>Daily schedule<span>1日のスケジュール</span></h2>
+<h2>Daily schedule<span>一日のスケジュール</span></h2>
     
   
 <div style="text-align: center">  
