--- a/detail.html
+++ b/detail.html
@@ -46,7 +46,7 @@
   
 <div style="text-align: center">  
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/スケジュール.png" alt="スケジュール">
+<img src="https://a-chaaa.github.io/rinakoteikoku/スケジュール.png" alt="スケジュール">
 </figure>
 </div>
 
