--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
 <div class="text">
 <h3>名前入りきっぷ</h3>
 <h4>300円（税込330円）</h4>
+自分の名前と推しの名前を入れれば<br>
+もう実質一緒に来てるじゃんね
+推しカプの名前を入れるのもあり！<br>
+
 </div>
 </div>
 
